<resources>
    <string name="app_name">Sudoku Battle</string>
    <string name="please_wait_profile">Loading…</string>
    <string name="welcome_not_login">Please login</string>
    <string name="welcome_format">Welcome %1$s</string>
    <string name="multi_noti_waiting">Multi play sudoku in waiting…</string>
    <string name="multi_noti_playing">Multi play sudoku in playing…</string>
    <string name="sign_in">Sign in</string>
    <string name="update_user_profile">Update user profile</string>
    <string name="settings_cell_haptic">Enabled sudoku cell click haptic</string>
    <string name="version_format">Ver.%1$s</string>
    <string name="version_updatable_format">Ver.%1$s(Click to update)</string>
    <string name="clear_seen_guide">Review description</string>
    <string name="clear_seen_guide_success">You can now see descriptions for every feature again.</string>
    <string name="clear_seen_tutorial">Watch tutorial</string>
    <string name="profile_update_title">Profile update</string>
    <string name="profile_display_name">Display name</string>
    <string name="profile_input_display_name">input display name</string>
    <string name="profile_status_message">Status message</string>
    <string name="profile_input_status_message">input status message</string>
    <string name="profile_update">Update</string>
    <string name="profile_image_update_title">Profile image</string>
    <string name="profile_image_update_message">Please enter the URL to use as the profile image.</string>
    <string name="profile_image_input_hint">input your profile image</string>
    <string name="profile_image_url_invalid">url is invalid</string>
    <string name="profile_label_multi_play_rank">Multi Play Ladder</string>
    <string name="profile_label_show_this_user">View Profile</string>
    <string name="profile_label_last_checked">Last Checked</string>
    <string name="profile_label_nation">Nation</string>
    <string name="profile_last_checked_format" translatable="false">yyyy-MM-dd HH:mm:ss</string>
    <string name="profile_label_challenge_log">Challenge Records</string>
    <string name="profile_challenge_log_format">Cleared the challenge created at %1$s with a record of %2$s and am currently ranked %3$s.(%4$s)</string>
    <string name="navigation_tab_single">Single</string>
    <string name="navigation_tab_multi">Multi</string>
    <string name="navigation_tab_challenge">Challenge</string>
    <string name="title_single_play">Single Play</string>
    <string name="beginner_matrix_size" translatable="false">4 X 4</string>
    <string name="intermediate_matrix_size" translatable="false">9 X 9</string>
    <string name="advanced_matrix_size" translatable="false">16 X 16</string>
    <string name="retry_message">Would you like to reset and restart the game?</string>
    <string name="title_multi_play">Multi Play</string>
    <string name="multi_play_add">+ New Game</string>
    <string name="multi_play_header_users">For users</string>
    <string name="multi_play_header_others">For participate</string>
    <string name="multi_list_join_confirm">Would you like to join this game?</string>
    <string name="multi_list_empty_message">There are no games available to participate.</string>
    <string name="loading_statistics">loading statistics…</string>
    <string name="loading_participants">loading participants…</string>
    <string name="error_statistics">statistics load failed</string>
    <string name="error_participants">participants load failed</string>
    <string name="empty_guest">empty</string>
    <string name="format_statistics_with_ranking">%1$d wins %2$d losses( Ranking : %3$s )</string>
    <string name="format_statistics">%1$d wins %2$d losses</string>
    <string name="multi_list_error_already_full">The number of participants is already full.</string>
    <string name="multi_list_not_found">This game does not currently exist. Please refresh and check again.</string>
    <string name="multi_play_header_leaderboard">LeaderBoard</string>
    <string name="multi_list_filter_possible_to_join">Show only empty</string>
    <string name="multi_play_error_only_host">Only the host is allowed.</string>
    <string name="multi_play_error_already_started">You can participate because the game has already started.</string>
    <string name="multi_create_title">Create Multi Play</string>
    <string name="multi_create_label_select_matrix">Select sudoku</string>
    <string name="multi_create_label_select_participants">Select participants count</string>
    <string name="multi_create_label_participants_2">2</string>
    <string name="multi_create_label_participants_3">3</string>
    <string name="multi_create_label_participants_4">4</string>
    <string name="multi_create_label_do_create">Do create!!</string>
    <string name="multi_create_label_ai">Play with A.I</string>
    <string name="select_matrix_title">Select Sudoku</string>
    <string name="require_select_stage">require select stage</string>
    <string name="multi_create_please_select_stage">Touch to select</string>
    <string name="multi_create_label_notification_joined_participant">Notification when other party joins</string>
    <string name="multi_create_label_notification_joined_participant_guide">After creating a room, if an opponent joins, you will be notified by a status bar notification.</string>
    <string name="battle_exit_message">Are you sure you want to quit the game? Depending on your opponent\'s record, you may be set for a loss.</string>
    <string name="caption_start_battle_for_host">Start Game</string>
    <string name="caption_pending_battle_for_participant">Ready</string>
    <string name="caption_ready_battle_for_participant">Cancel Ready</string>
    <string name="status_ready_battle_for_participant">is Ready</string>
    <string name="status_pending_battle_for_participant">Waiting</string>
    <string name="status_host_battle_for_participant">Host</string>
    <string name="status_clear_battle_for_participant">Clear</string>
    <string name="versus" translatable="false">VS</string>
    <string name="multi_play_error_empty_participants">There is no one to play game.</string>
    <string name="multi_play_error_require_ready_all_users">Your opponent is not ready.</string>
    <string name="multi_play_notification_joined_participant">%1$s participated in the game I created. Click the notification to proceed with the match.</string>
    <string name="multi_play_option_kick_player">Kick this player</string>
    <string name="multi_play_invite_confirm_title">@string/user_list_menu_label_invite_multi_play</string>
    <string name="multi_play_invite_confirm_message">Would you like to challenge \"%1$s\" to a match?</string>
    <string name="caption_cpu">A.I</string>
    <string name="me">Me</string>
    <string name="title_challenge">Challenge</string>
    <string name="challenge_divider_for_my_rank" translatable="false">.\n.\n.</string>
    <string name="error_challenge_already_record">You have already completed the challenge. You can receive rewards for trying again through advertising. Would you like to try again?</string>
    <string name="error_challenge_retry_rewarded">failed rewarded</string>
    <string name="rank_format_nan" translatable="false">-</string>
    <string name="rank_format_first" translatable="false">1st</string>
    <string name="rank_format_second" translatable="false">2nd</string>
    <string name="rank_format_third" translatable="false">3rd</string>
    <string name="rank_format" translatable="false">%1$dth</string>
    <string name="challenge_list_item_rank_more">Show Leaderboard</string>
    <string name="challenge_list_item_created_at_format" translatable="false">yyyy-MM-dd HH:mm</string>
    <string name="challenge_list_item_description">No one has taken the challenge yet.\nClick to try it!</string>
    <string name="challenge_start">Start Challenge</string>
    <string name="complete_message">Congratulation!\nClear sudoku!!</string>
    <string name="lost_message">sorry.. you lost.</string>
    <string name="record">Your Record</string>
    <string name="Clear" translatable="false">×</string>
    <string name="start">Start</string>
    <string name="exit_game">Exit Game</string>
    <string name="confirm">Confirm</string>
    <string name="retry">Retry</string>
    <string name="show_replay">Show Replay</string>
    <string name="exit_confirm_for_single">Are you sure you want to quit the game?</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="in_app_update_title">App Update</string>
    <string name="in_app_update_message">There is the latest app update. Would you like to proceed with the update?</string>
    <string name="in_app_update_message_canceled">Cancel app update now. The update can be performed later through the options menu.</string>
    <string name="in_app_update_message_confirm">Proceed with updating the app now.</string>
    <string name="empty">Empty</string>
    <string name="no_name" translatable="false" />
    <string name="single_tab_guide_title">Single Play</string>
    <string name="single_tab_guide_desc">Provides a function to play when you want to practice alone.\nThe value of the stage cell changes every time.</string>
    <string name="multi_tab_guide_title">Multi Play</string>
    <string name="multi_tab_guide_desc">You can compete against other players.\nYou can create your own room or participate in a game created by another player.</string>
    <string name="challenge_tab_guide_title">Challenge Sudoku</string>
    <string name="challenge_tab_guide_desc">Boast your record by clearing Sudoku of the specified difficulty level.</string>
    <string name="sudoku_guide_desc_1">Let\'s learn the rules of Sudoku now?</string>
    <string name="sudoku_guide_desc_2">Sudoku is filled with non-overlapping values in each horizontal, vertical, and box.</string>
    <string name="sudoku_guide_desc_3">A 4 X 4 Sudoku puzzle has been created below.</string>
    <string name="sudoku_guide_desc_4">When you touch the cell you want to enter, a numeric prompt is generated.</string>
    <string name="sudoku_guide_desc_5">Drag in the direction of the desired value and then release to enter the value.</string>
    <string name="sudoku_guide_desc_6">Let\'s enter the correct value in an empty cell.</string>
    <string name="sudoku_guide_desc_7">Good job!! Click the end tutorial button below and enjoy the Sudoku game!!</string>
    <string name="sudoku_guide_exit_alert">Do you want to exit without finishing the tutorial?</string>
    <string name="sudoku_guide_finish">Tutorial ends</string>
    <string name="channel_id_multi_play_joined_participant" translatable="false">multi_play_joined_participant</string>
    <string name="channel_name_multi_play_joined_participant" translatable="false">Multi Play Joined Notification</string>
    <string name="channel_id_app_update" translatable="false">channel_id_app_update</string>
    <string name="channel_name_app_update" translatable="false">App Update Notification</string>
    <string name="channel_id_new_challenge" translatable="false">channel_id_new_challenge</string>
    <string name="channel_name_new_challenge" translatable="false">New Challenge Notification</string>
    <string name="channel_id_invite_multi_play" translatable="false">channel_id_invite_multi_play</string>
    <string name="channel_name_invite_multi_play" translatable="false">Invite MultiPlay Notification</string>
    <string name="notification_title_app_update">App update notification</string>
    <string name="admin_update_push_label_version_name" translatable="false">Version Name</string>
    <string name="admin_update_push_label_version_code" translatable="false">Version Code</string>
    <string name="admin_update_push_label_send" translatable="false">Send</string>
</resources>