<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/scroll_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/goreyong_ddalgi"
                    android:gravity="center"
                    android:lines="1"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="18dp"
                    android:text="@string/multi_create_title"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toTopOf="@id/card_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tv_label_select_matrix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/goreyong_ddalgi"
                    android:text="@string/multi_create_label_select_matrix"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@id/card_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    app:cardBackgroundColor="@color/gray_200"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="6dp"
                    app:contentPadding="18dp"
                    app:layout_constraintBottom_toTopOf="@id/tv_label_select_participant_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_select_matrix"
                    app:layout_constraintWidth_percent="0.7"
                    app:strokeColor="@color/gray_600"
                    app:strokeWidth="2dp">

                    <kr.co.hs.sudoku.views.MatrixItemView
                        android:id="@+id/matrix"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/tv_label_select_participant_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/goreyong_ddalgi"
                    android:text="@string/multi_create_label_select_participants"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@id/radio_group_participants"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_view" />

                <RadioGroup
                    android:id="@+id/radio_group_participants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:checkedButton="@id/radio_participants_2"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/btn_create"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_select_participant_size">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_participants_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/goreyong_ddalgi"
                        android:paddingHorizontal="8dp"
                        android:text="@string/multi_create_label_participants_2" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_participants_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:fontFamily="@font/goreyong_ddalgi"
                        android:paddingHorizontal="8dp"
                        android:text="@string/multi_create_label_participants_3" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_participants_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:fontFamily="@font/goreyong_ddalgi"
                        android:paddingHorizontal="8dp"
                        android:text="@string/multi_create_label_participants_4" />
                </RadioGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_create"
                    style="@style/Theme.HSSudoku2.OutlineButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="50dp"
                    android:minHeight="70dp"
                    android:text="@string/multi_create_label_do_create"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/radio_group_participants" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>

